[OD] Apply font styles on entry body, fix author display on mobile

--- a/assets/css/editor-styles.css
+++ b/assets/css/editor-styles.css
@@ -775,23 +775,58 @@
       flex-wrap: wrap;
   margin-top: 2rem; }
 
-.author.l-with-image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start; }
-  .author.l-with-image .author__image {
-    width: 8rem; }
-  .author.l-with-image .author__content {
-    width: calc(100% - 14rem);
-    padding-left: 3rem; }
-  @media (min-width: 1100px) {
+@media (max-width: 559px) {
+  .author.l-with-image {
+    background: #25b34b;
+    position: relative;
+    overflow: hidden;
+    z-index: 5;
+    padding-bottom: 5rem;
+    text-align: center; } }
+  @media (max-width: 559px) and (min-width: 700px) {
+    .author.l-with-image {
+      padding-bottom: 8rem; } }
+
+@media (max-width: 559px) {
+    .author.l-with-image:before {
+      position: absolute;
+      content: " ";
+      background: #148839;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: 0 -5rem -5rem;
+      top: 15rem;
+      -webkit-transform: rotate(2deg);
+              transform: rotate(2deg); }
+    .author.l-with-image:before {
+      z-index: -1;
+      top: 12rem; }
     .author.l-with-image .author__image {
-      width: 14rem; }
+      max-width: 14rem;
+      margin: 0 auto; }
     .author.l-with-image .author__content {
-      width: calc(100% - 14rem); } }
+      margin-top: 3rem; } }
+
+@media (min-width: 560px) {
+  .author.l-with-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+    .author.l-with-image .author__image {
+      width: 8rem; }
+    .author.l-with-image .author__content {
+      width: calc(100% - 14rem);
+      padding-left: 3rem; } }
+
+@media (min-width: 700px) {
+  .author.l-with-image .author__image {
+    width: 14rem; }
+  .author.l-with-image .author__content {
+    width: calc(100% - 14rem); } }
 
 .author--full {
   max-width: 760px;
@@ -1942,8 +1977,13 @@
     text-decoration: none; }
     .link--contact:hover:before, .link--contact:focus:before, .link--contact:active:before {
       margin-right: 1.1rem; }
-  .link--contact + .link--contact {
-    margin-left: 2rem; }
+  @media (max-width: 559px) {
+    .link--contact {
+      display: block;
+      word-break: break-word; } }
+  @media (min-width: 560px) {
+    .link--contact + .link--contact {
+      margin-left: 2rem; } }
 
 .link--phone:before {
   content: "";
