--- a/scss/components/_single-tipkaart.scss
+++ b/scss/components/_single-tipkaart.scss
@@ -226,6 +226,7 @@
     .section--links,
     .section--downloads {
       @include ho-padding;
+      max-width: calc(#{$max-width-inner} + #{$gutter * 2}); //max width + padding
     }
 
     .section--links {
